Timer Fixes * Updates for jumpy timy * Updates to fix category change * When timer runs out - just add a strike and get new items * Mobile CSS updates

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -167,7 +167,7 @@ body {
 /*iPhone6+*/
 @media screen and (max-width : 800px) {
     .item {
-        height: 200px;
+        height: 180px;
     }
 
     .label {
